--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ plugins {
     id 'application'
 
     id 'jacoco'
+
+    // https://imperceptiblethoughts.com/shadow/getting-started/#default-java-groovy-tasks
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
+
 }
 
 repositories {
@@ -27,11 +31,19 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
+
+    implementation "com.sparkjava:spark-core:2.9.3"
+    implementation "com.sparkjava:spark-template-mustache:2.7.1"
+
+    implementation "org.apache.logging.log4j:log4j-api:2.13.3"
+    implementation "org.apache.logging.log4j:log4j-core:2.13.3"
+    implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.13.3"
+
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'myDemoApp.App'
+    mainClassName = 'myDemoApp.App'
 }
 
 tasks.named('test') {
