--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,3 +56,6 @@ tasks.named('test') {
 jacocoTestReport{
     dependsOn test
 }
+
+task stage(dependsOn: ['shadowJar'])
+shadowJar.mustRunAfter clean
